@@ -1,4 +1,4 @@
-	README for DuroDBMS 0.21
+	README for DuroDBMS 0.22
 
 $Id$
 
@@ -25,7 +25,7 @@ When DuroDBMS is installed, the Tcl interface is installed as a package in
 the 'lib' subdirectory. The simplest way to make it available to application
 scripts is to add this subdirectory to TCLLIBPATH, e.g.:
 
-    TCLLIBPATH=/usr/local/durodbms.0.21/lib
+    TCLLIBPATH=/usr/local/durodbms.0.22/lib
     export TCLLIBPATH
 
 Tips
