@@ -14,7 +14,7 @@ import os
 bdbhome = ARGUMENTS.get('bdbhome', '/usr/local/BerkeleyDB.5.3')
 with_durotcl = int(ARGUMENTS.get('with_durotcl', 1))
 
-release = '0.21'
+release = '0.22'
 
 env = Environment(ENV = os.environ, tools = ['default', 'textfile'])
 
