@@ -46,7 +46,7 @@ for more information on <cite>TTM</cite> and Tutorial D.
 
 <pre>
 durodt
-Duro D/T library version 0.21
+Duro D/T library version 0.22
 Implicit transactions enabled.
 no db>
 </pre>
