@@ -266,6 +266,8 @@ Duro_dt_execute_str
 Duro_dt_invoke_ro_op
 Duro_dt_invoke_update_op
 Duro_dt_prompt
+Duro_dt_put_creop_info
+Duro_dt_get_creop_info
 Duro_expr_type_retry
 Duro_evaluate_retry
 RDB_www_form_to_tuple
